Refine HTML and styles: update Spanish meta descriptions, enhance structured data with location and services, adjust theme color, optimize animations, and improve consistency in typography and CSS variables.

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   },
   "scripts": {
     "tailwindcss": "npx tailwindcss -c tailwind.config.js -o css/stylesheet.css -w"
+  },
+  "dependencies": {
+    "@tailwindcss/cli": "^4.1.17"
   }
 }
